# GraphInsight

./: BUGSLIST.txt  CMakeLists.txt  COPYRIGHT.txt  HowToBuild.txt  LICENSE.txt  README.md  README.txt
cmake/: FindFreeGLUT.cmake  FindOpenGL.cmake  ReplicatePythonSourceTree.cmake  UseCython.cmake  UseSubversion.cmake  generateLinuxDesktopEntry.sh  generateLinuxDirectory.sh  generateLinuxMenuEntry.sh
data/: weighted.dimacs
data/Samples/: Comanche.net  FootBall.net  GR3_53.net  Grid20x20.net  PetrisX.net  PhD.net  PowerGrid.net  Star.net  a97.net  airfoil1.net  bmc-ibm-5.net  braun8.net  debug.net  diseasome.net  eva.net  hypercube4.net  longmult5-UP.cnf  ppa_capture.net  website.net
resources/: documents.qrc
resources/docs/: API.html  IDEE.html
resources/icons/: iconwin32.rc  logo.icns  logo2.icns
resources/macx_bundle/: Info.plist
resources/python_scripts/: colordistance.py  example_node_creation_remotion.py  init.py  testnodecreation.py
resources/samples/: 1CRN.net  3elt.net  Comanche.net  Movies.net  NetScience.net  Write.net  disi-authors.net  disi-publications.net  eva2D.net  hanoi5-UP.cnf  longmult5-UP.cnf  longmult5-UP.net  ppa_capture.net  sierp3.net  website.net  wikipedia.net
resources/shaders/: SimpleShader.frag  SimpleShader.vert  Toonshader.frag  Toonshader.vert  XRayShader.frag  XRayShader.vert
script/: Qt47.supp  deployLinuxGIT.sh  deployMac.sh  deployWin32.bat  generatedepgraph.sh  graphviz-cleaner.py  memoryAnalyzer.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/common/: Arcball.cpp  Arcball.h  CMakeLists.txt  Common.cpp  Common.h  Makefile  MatrixLoader.h  MersenneTwister.h  Statistic.cpp  Statistic.h  Timer.cpp  Timer.h  cmake_install.cmake
src/dimreduction/: CMakeLists.txt  DimensionalityReduction.h  IsoMap.cpp  IsoMap.h  KernelPCA.cpp  KernelPCA.h  LocallyLinearEmbedding.cpp  LocallyLinearEmbedding.h  RandomProjection.cpp  RandomProjection.h
src/graphinsight/: About.ui  Activate.ui  BackgroundLayoutThread.cpp  BackgroundLayoutThread.h  CMakeLists.txt  ConnectionHelper.h  CustomObject.cpp  CustomObject.h  DataSet.cpp  DataSet.h  DocumentationText.cpp  DocumentationText.h  GLUtils.cpp  GLUtils.h  GLWidget.cpp  GLWidget.h  GraphLayoutGL.cpp  GraphLayoutGL.h  GraphLayoutGLOptions.cpp  GraphLayoutGLOptions.h  HelpDialog.ui  LNodeFactory.cpp  LNodeFactory.h  LNodeWrapper.cpp  LNodeWrapper.h  LayoutThread.cpp  LayoutThread.h  LicenseType.h  Licensing.cpp  Licensing.h  Licensing.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowDecorator.cpp  MainWindowDecorator.h  Makefile  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  (+26 more)
src/graphinsight/__/__/resources/: demos.qrc.depends  images.qrc.depends
src/graphlayout/: BarnesHutOctree.cpp  BarnesHutOctree.h  BarnesHutQuadtree.cpp  BarnesHutQuadtree.h  BarnesHutTree.cpp  BarnesHutTree.h  CGSolver.cpp  CGSolver.h  CMakeLists.txt  Circle.h  Cnf.cpp  Cnf.h  Community.cpp  Community.h  CostFunction.h  DaisyFilter.cpp  DaisyFilter.h  DisjointSet.cpp  DisjointSet.h  Edge.cpp  Edge.h  Entity.cpp  Entity.h  EntityAttribute.cpp  EntityAttribute.h  EntityAttributeImage.cpp  EntityAttributeImage.h  EntityAttributeInt.cpp  EntityAttributeInt.h  EntityAttributeString.cpp  EntityAttributeString.h  EntityAttributeUrl.cpp  EntityAttributeUrl.h  FBinaryStress2D.cpp  FBinaryStress2D.h  FBinaryStress3D.cpp  FBinaryStress3D.h  FKamadaKawai2D.cpp  FKamadaKawai2D.h  FKamadaKawai3D.cpp  (+63 more)
src/pythonqt/: CMakeLists.txt  Makefile  cmake_install.cmake
src/pythonqt/generated_cpp/com_trolltech_qt_core_builtin/: moc_com_trolltech_qt_core_builtin0.cxx
src/pythonqt/generated_cpp/com_trolltech_qt_gui_builtin/: moc_com_trolltech_qt_gui_builtin0.cxx
src/pythonqt/src/: PythonQt_QtAll.cpp  moc_PythonQt.cxx  moc_PythonQtSignalReceiver.cxx  moc_PythonQtStdDecorators.cxx
src/pythonqt/src/gui/: PythonQtScriptingConsole.cpp  PythonQtScriptingConsole.h  moc_PythonQtScriptingConsole.cxx
src/pywrapper/: CMakeLists.txt  pyEdge.pyx  pyGraphLayout.pyx  pyGraphLayout2.pyx  pyGraphLayout3.pyx  pyNode.pyx
src/tests/: CMakeLists.txt  Makefile  cmake_install.cmake  test2.cpp  testBarnesHutTree.cpp  testCGSolver.cpp  testCNF.cpp  testDimReduction.cpp  testEigenAnalysis.cpp  testGraph1.cpp  testGraph2.cpp  testGraph3.cpp  testGraphLayout1.cpp  testGraphLayout2.cpp  testGraphMemory.cpp  testPythonDict.cpp  testRectangles.cpp
src/tests/testPythonQScriptingConsole/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  moc_PyExampleObject.cxx  testGetSaveFileName.cpp
