set(GraphLayout_HDR 
Cnf.h
Community.h
CGSolver.h
LayoutOptions.h
Circle.h
CostFunction.h
DaisyFilter.h
DisjointSet.h
Edge.h
EntityAttributeString.h
EntityAttributeImage.h
EntityAttributeInt.h
EntityAttributeUrl.h
EntityAttribute.h
Entity.h
FBinaryStress2D.h
FBinaryStress3D.h
FKamadaKawai2D.h
FKamadaKawai3D.h
Graph.h
GraphLayout.h
LabelVisualizer.h
LayoutMethod.h
LEdge.h
LMACE.h
LMBinaryStress.h
LMBinaryStressMultilevel.h
LMCircular.h
LMCircularMinEdge.h
LMCircularMinCross.h
LMFruchtermanReingold.h
LMFruchtermanReingoldProportional.h
LMFruchtermanReingoldMultilevel.h
LMFruchtermanReingoldProportionalMultilevel.h
LMHighDimensionalEmbedder.h
LMKamadaKawai.h
LMLabelAdjust.h
LMLinLogModel.h
LMLinLogModelMultilevel.h
LMNothing.h
LMRandom.h
LMStressMajorization.h
LMTreeLayout.h
LNode.h
Matcher.h
Node.h
Solver.h
BarnesHutTree.h
BarnesHutQuadtree.h
BarnesHutOctree.h
ForceDirectedMethod.h
)

set(GraphLayout_SRC
Community.cpp
LayoutOptions.cpp
Cnf.cpp
CGSolver.cpp
DaisyFilter.cpp
DisjointSet.cpp
Edge.cpp
EntityAttribute.cpp
EntityAttributeImage.cpp
EntityAttributeInt.cpp
EntityAttributeString.cpp
EntityAttributeUrl.cpp
Entity.cpp
FBinaryStress2D.cpp
FBinaryStress3D.cpp
FKamadaKawai2D.cpp
FKamadaKawai3D.cpp
Graph.cpp
GraphLayout.cpp
LabelVisualizer.cpp
LEdge.cpp
LMACE.cpp
LMBinaryStress.cpp
LMBinaryStressMultilevel.cpp
LMCircular.cpp
LMCircularMinEdge.cpp
LMCircularMinCross.cpp
LMFruchtermanReingold.cpp
LMFruchtermanReingoldProportional.cpp
LMFruchtermanReingoldMultilevel.cpp
LMFruchtermanReingoldProportionalMultilevel.cpp
LMHighDimensionalEmbedder.cpp
LMKamadaKawai.cpp
LMLabelAdjust.cpp
LMLinLogModel.cpp
LMLinLogModelMultilevel.cpp
LMNothing.cpp
LMRandom.cpp
LMStressMajorization.cpp
LMTreeLayout.cpp
LNode.cpp
Matcher.cpp
Node.cpp
BarnesHutQuadtree.cpp
BarnesHutOctree.cpp
ForceDirectedMethod.cpp
)

add_library(GraphLayout ${GraphLayout_SRC} ${GraphLayout_HDR})
target_link_libraries(GraphLayout ${EXTRA_LIBS} Common )

